--- a/Shijing/pcr.rmd
+++ b/Shijing/pcr.rmd
@@ -5,13 +5,13 @@ output: pdf_document
 
 ### 3. PCR (Iris)
 
-```{r PCA_description}
+```{r PCA_description,include=FALSE}
 set.seed(2)
 # Need help with PCA analysis
 # pcr.fit=pcr(SalePrice~., data=HousePricing, scale=TRUE, validation ="CV")
-setwd("~/OneDrive - Worcester Polytechnic Institute (wpi.edu)/2020Fall/DS502/DS502FinalProject")
-train.original = read.csv("./SourceData/train_original.csv")
-train_ori = train.original
+# setwd("~/Documents/DS502/DS502FinalProject")
+# train.original = read.csv("./SourceData/train_original.csv")
+# train_ori = train.original
 library(dplyr)
 library(tidyr)
 library(pls)
@@ -29,8 +29,8 @@ train.df = train.subset[train.bs,]
 pcaCharts <- function(x) {
   x.var <- x$sdev ^ 2
   x.pvar <- x.var/sum(x.var)
-  print("proportions of variance:")
-  print(x.pvar)
+  # print("proportions of variance:")
+  # print(x.pvar)
   
   par(mfrow=c(2,2))
   plot(x.pvar,xlab="Principal component", ylab="Proportion of variance explained", ylim=c(0,1), type='b',cex.lab=1, cex.axis=1.5, cex.main=1.5, cex.sub=1.5)
@@ -40,44 +40,57 @@ pcaCharts <- function(x) {
   par(mfrow=c(1,1))
 }
 
-# x = subset(train.df, select = -c(SalePrice) )
-# train.pca <- prcomp(x ,center = TRUE)
-# pcaCharts(train.pca)
+x = subset(train.df, select = -c(SalePrice) )
+train.pca <- prcomp(x ,center = TRUE)
+pcaCharts(train.pca)
 
 ########################### insert an image  (pca_plot.png) #################################
-
-# validationplot(pcr_fit, val.type = "MSEP",cex.lab=1, cex.axis=0.8, cex.main=1.5, cex.sub=0.8)
-# axis(side = 1, at = c(32), cex.axis=0.8)
-# abline(v = 32, col = "blue", lty = 5)
-# abline(v = 26, col = "dark green", lty = 5)
-# axis(side = 1, at = c(26), cex.axis=0.8)
-
+pcr_fit = pcr(SalePrice~., data = train.df,validation = "CV")
+# summary(pcr_fit)
+validationplot(pcr_fit, val.type = "MSEP",cex.lab=1, cex.axis=0.8, cex.main=1.5, cex.sub=0.8)
+axis(side = 1, at = c(32), cex.axis=0.8)
+abline(v = 32, col = "blue", lty = 5)
 
 ########################### insert another image  (pcr_mse.png) #################################
 ```
+```{r graph1,echo=FALSE}
+pcaCharts(train.pca)
+```
 
-```{r pcr_original}
+\text The four graphs above show the variance explained for each component after doing PCA on our model. According to the graphs above, proportion of variance explained and variance are decreasing as number of components increases. Cumulative variance of the model increases as number of principal components increases. As we can see from the upper right graph, more than 90% of variance is explained when there are around 25 principal components. 
+
+Then we further explore the details of variance explained for each number of components. We found out that when there are 32 components, the variance explained will reach 100% and the variance will reach 90% when there are 19 components. Since we wanted to obtain as much variance as we could, but also trying to limit the number of predictors, we calculated the cross validation MSE for each number components in a pcr model to get a relatively ideal number of components. As we can see from the graph below, the cross validation MSE is the lowest when there are 28 components in the PCR model. Therefore we applied 28 components to test the result of our testing data set. 
+
+```{r graph2,echo=FALSE}
+validationplot(pcr_fit, val.type = "MSEP",cex.lab=1, cex.axis=0.8, cex.main=1.5, cex.sub=0.8)
+axis(side = 1, at = c(19), cex.axis=0.8)
+abline(v = 19, col = "blue", lty = 5)
+axis(side = 1, at = c(28), cex.axis=0.8)
+abline(v = 28, col = "dark green", lty = 5)
+```
+
+```{r pcr_original,include=FALSE,echo=FALSE}
 # start pcr
 
 pcr_fit = pcr(SalePrice~., data = train.df,validation = "CV")
 pcr_pred = predict(pcr_fit,test)
 
-accuracy.ori = mean((test$SalePrice - pcr_pred[,,32])/test$SalePrice<=0.2 & (test$SalePrice - pcr_pred[,,32])/test$SalePrice>=-0.05)
+accuracy.ori = mean((test$SalePrice - pcr_pred[,,28])/test$SalePrice<=0.2 & (test$SalePrice - pcr_pred[,,28])/test$SalePrice>=-0.05)
 
 
 rsq <- function(x, y) summary(lm(y~x))$r.squared
-rsq.ori = rsq(test$SalePrice,pcr_pred[,,32])
+rsq.ori = rsq(test$SalePrice,pcr_pred[,,28])
 
 rmse <-  function(m, o){sqrt(mean((m - o)^2))}
-rmse.ori = rmse(test$SalePrice,pcr_pred[,,32])
+rmse.ori = rmse(test$SalePrice,pcr_pred[,,28])
 
 
 ```
 
-``` {r pcr_log}
-setwd("~/OneDrive - Worcester Polytechnic Institute (wpi.edu)/2020Fall/DS502/DS502FinalProject")
-train.log = read.csv("./SourceData/train_log.csv")
-train_log = train.log
+``` {r pcr_log,include=FALSE}
+# setwd("~/Documents/DS502/DS502FinalProject")
+# train.log = read.csv("./SourceData/train_log.csv")
+# train_log = train.log
 set.seed(667)
 train = sample(dim(train_log)[1],size = dim(train_log)[1]*0.7)
 train.subset = train_log[train,]
@@ -87,17 +100,17 @@ train.bs = sample(dim(train.subset)[1],replace = T)
 train.df = train.subset[train.bs,]
 pcr_fit = pcr(SalePrice~., data = train.df,validation = "CV")
 pcr_pred = predict(pcr_fit,test)
-accuracy.log = mean((exp(test$SalePrice) - exp(pcr_pred[,,32]))/exp(test$SalePrice<=0.2) & (exp(test$SalePrice) - exp(pcr_pred[,,32]))/exp(test$SalePrice)>=-0.05)
+accuracy.log = mean((exp(test$SalePrice) - exp(pcr_pred[,,28]))/exp(test$SalePrice<=0.2) & (exp(test$SalePrice) - exp(pcr_pred[,,28]))/exp(test$SalePrice)>=-0.05)
 
-rsq.log = rsq(test$SalePrice,pcr_pred[,,32])
-rmse.log = rmse(exp(test$SalePrice),exp(pcr_pred[,,32]))
+rsq.log = rsq(test$SalePrice,pcr_pred[,,28])
+rmse.log = rmse(exp(test$SalePrice),exp(pcr_pred[,,28]))
 
 ```
 
-``` {r pcr_sqrt}
-setwd("~/OneDrive - Worcester Polytechnic Institute (wpi.edu)/2020Fall/DS502/DS502FinalProject")
-train.sqrt = read.csv("./SourceData/train_sqrt.csv")
-train_sqrt = train.sqrt
+``` {r pcr_sqrt,include=FALSE}
+# setwd("~/Documents/DS502/DS502FinalProject")
+# train.sqrt = read.csv("./SourceData/train_sqrt.csv")
+# train_sqrt = train.sqrt
 
 set.seed(233)
 train = sample(dim(train_sqrt)[1],size = dim(train_sqrt)[1]*0.7)
@@ -108,15 +121,16 @@ train.bs = sample(dim(train.subset)[1],replace = T)
 train.df = train.subset[train.bs,]
 pcr_fit = pcr(SalePrice~., data = train.df,validation = "CV")
 pcr_pred = predict(pcr_fit,test)
-accuracy.sqrt = mean((test$SalePrice^4 - pcr_pred[,,32]^4)/test$SalePrice^4<=0.2 & (test$SalePrice^4 - pcr_pred[,,32]^4)/test$SalePrice^4>=-0.05)
+accuracy.sqrt = mean((test$SalePrice^4 - pcr_pred[,,28]^4)/test$SalePrice^4<=0.2 & (test$SalePrice^4 - pcr_pred[,,28]^4)/test$SalePrice^4>=-0.05)
 
-rsq.sqrt = rsq(test$SalePrice,pcr_pred[,,32])
-rmse.sqrt = rmse(test$SalePrice^4,pcr_pred[,,32]^4)
+rsq.sqrt = rsq(test$SalePrice,pcr_pred[,,28])
+rmse.sqrt = rmse(test$SalePrice^4,pcr_pred[,,28]^4)
 ```
 
-#### Cross Validation
+<!-- #### Cross Validation -->
 
-``` {r pcr_cv}
+``` {r pcr_cv,include=FALSE }
+library(pander)
 x <- data.frame("y" = c("original","log","sqrt"), "Accuracy" = c(accuracy.ori,accuracy.log,accuracy.sqrt), "R2" = c(rsq.ori,rsq.log,rsq.sqrt),"RMSE" = c(rmse.ori,rmse.log,rmse.sqrt))
 pander(x)
 
